--- a/notebooks/opensearch/tmdb/raw-opensearch-commands.ipynb
+++ b/notebooks/opensearch/tmdb/raw-opensearch-commands.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "<Response [201]>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,58 +225,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://localhost:9201/tmdb/_search\n",
-      "{\n",
-      "  \"_index\": \"tmdb\",\n",
-      "  \"_id\": \"7555\",\n",
-      "  \"_score\": 0.0,\n",
-      "  \"_source\": {\n",
-      "    \"id\": \"7555\",\n",
-      "    \"title\": \"Rambo\",\n",
-      "    \"overview\": \"When governments fail to act on behalf of captive missionaries, ex-Green Beret John James Rambo sets aside his peaceful existence along the Salween River in a war-torn region of Thailand to take action.  Although he's still haunted by violent memories of his time as a U.S. soldier during the Vietnam War, Rambo can hardly turn his back on the aid workers who so desperately need his help.\",\n",
-      "    \"tagline\": \"Heroes never die... They just reload.\",\n",
-      "    \"directors\": [\n",
-      "      \"Sylvester Stallone\"\n",
-      "    ],\n",
-      "    \"cast\": \"Sylvester Stallone Julie Benz Matthew Marsden Reynaldo Gallegos Jake La Botz Tim Kang Maung Maung Khin Paul Schulze Ken Howard Graham McTavish Cameron Pearson Thomas Peterson Tony Skarberg James With Kasikorn Niyompattana Shaliew 'Lek' Bamrungbun\",\n",
-      "    \"genres\": [\n",
-      "      \"Action\",\n",
-      "      \"Thriller\"\n",
-      "    ],\n",
-      "    \"release_date\": \"2008-01-24\",\n",
-      "    \"release_year\": \"2008\",\n",
-      "    \"poster_path\": \"https://image.tmdb.org/t/p/w185/ec1m7YgBYb4os06OSNW3QBaNYqZ.jpg\",\n",
-      "    \"vote_average\": 6.4,\n",
-      "    \"vote_count\": 770,\n",
-      "    \"collection_name\": \"Rambo Collection\"\n",
-      "  },\n",
-      "  \"fields\": {\n",
-      "    \"_ltrlog\": [\n",
-      "      {\n",
-      "        \"ltr_features\": [\n",
-      "          {\n",
-      "            \"name\": \"title_bm25\",\n",
-      "            \"value\": 11.657399\n",
-      "          },\n",
-      "          {\n",
-      "            \"name\": \"overview_bm25\",\n",
-      "            \"value\": 10.083591\n",
-      "          }\n",
-      "        ]\n",
-      "      }\n",
-      "    ]\n",
-      "  },\n",
-      "  \"matched_queries\": [\n",
-      "    \"logged_features\"\n",
-      "  ]\n",
-      "}\n"
+      "http://localhost:9201/tmdb/_search\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'hits'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[26], line 38\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28mprint\u001b[39m(search_with_log_url)\n\u001b[1;32m     37\u001b[0m resp \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(search_with_log_url, json\u001b[38;5;241m=\u001b[39msearch_with_log)\u001b[38;5;241m.\u001b[39mjson()\n\u001b[0;32m---> 38\u001b[0m \u001b[38;5;28mprint\u001b[39m(json\u001b[38;5;241m.\u001b[39mdumps(\u001b[43mresp\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mhits\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhits\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m], indent\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m))\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'hits'"
      ]
     }
    ],
@@ -308,7 +275,8 @@
     "    \"ltr_log\": {\n",
     "      \"log_specs\": {\n",
     "        \"name\": \"ltr_features\",\n",
-    "        \"named_query\": \"logged_features\"\n",
+    "        \"named_query\": \"logged_features\",\n",
+    "        \"rescore_index\": 0\n",
     "      }\n",
     "    }\n",
     "  }\n",
@@ -317,7 +285,7 @@
     "search_with_log_url = f'http://{host}:{port}/tmdb/_search'\n",
     "print(search_with_log_url)\n",
     "resp = requests.get(search_with_log_url, json=search_with_log).json()\n",
-    "print(json.dumps(resp['hits']['hits'][0], indent=2))"
+    "print(json.dumps(resp['hits']['hits'][0], indent=2))\n"
    ]
   },
   {
@@ -367,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +358,7 @@
        " '_primary_term': 1}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -530,9 +498,9 @@
      "output_type": "stream",
      "text": [
       "http://localhost:9201/tmdb/_search\n",
+      "Rambo III\n",
       "Rambo: First Blood Part II\n",
       "First Blood\n",
-      "Rambo III\n",
       "Rambo\n",
       "Black Mirror: White Christmas\n",
       "The Brave-Hearted Will Take the Bride\n",
