--- a/notebooks/click models.ipynb
+++ b/notebooks/click models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,9 +71,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {'rambo': [(0, 11.11111111111111),\n",
+       "              (4, 6.666666666666667),\n",
+       "              (3, 5.555555555555555),\n",
+       "              (1, 2.6666666666666665),\n",
+       "              (2, 0.0),\n",
+       "              (9, 0.0),\n",
+       "              (7, 0.0)],\n",
+       "             'star trek': [(9, 33.333333333333336),\n",
+       "              (6, 6.666666666666667),\n",
+       "              (8, 6.666666666666667),\n",
+       "              (7, 6.666666666666667),\n",
+       "              (3, 5.0),\n",
+       "              (1, 4.166666666666667),\n",
+       "              (5, 3.3333333333333335),\n",
+       "              (2, 1.6666666666666667),\n",
+       "              (0, 0.0),\n",
+       "              (4, 0.0)]})"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "coec_judgments"
    ]
@@ -91,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,18 +130,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.9987182876053634,\n",
+       " 0.9999889839385798,\n",
+       " 0.9999999990640687,\n",
+       " 0.44523038207622834]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.ranks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(4, 1.0),\n",
+       " (3, 0.9989838560294817),\n",
+       " (0, 0.747358098424573),\n",
+       " (1, 0.4003830084292817),\n",
+       " (9, 4.113007892053103e-81),\n",
+       " (7, 4.113007892053103e-81),\n",
+       " (2, 4.076400940523653e-131)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pbm_judgments['rambo']"
    ]
@@ -127,9 +186,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 4, 3, 1, 2, 9, 7]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from ltr.helpers.tau import tau\n",
     "from ltr.helpers.tau import avg_tau\n",
@@ -140,9 +210,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 3, 0, 1, 9, 7, 2]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rambo2 = just_doc_ids(pbm_judgments['rambo'])\n",
     "rambo2\n"
@@ -150,18 +231,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.21632653061224488"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "avg_tau(rambo1, rambo2, at=7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 6, 8, 7, 3, 1, 5, 2, 0, 4]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "star_trek1 = just_doc_ids(coec_judgments['star trek'])\n",
     "star_trek1"
@@ -169,9 +272,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 6, 8, 7, 3, 5, 1, 2, 0, 4]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "star_trek2 = just_doc_ids(pbm_judgments['star trek'])\n",
     "star_trek2"
@@ -179,9 +293,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9066666666666666"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "avg_tau(star_trek1, star_trek2, at=10)"
    ]
@@ -199,9 +324,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function ltr.clickmodels.ubm.Model.__init__.<locals>.<lambda>()>,\n",
+       "            {('rambo', 2): 0.0655509140827497,\n",
+       "             ('star trek', 5): 0.0,\n",
+       "             ('rambo', 1): 1.0,\n",
+       "             ('star trek', 2): 1.0})"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from ltr.clickmodels.ubm import user_browse_model\n",
     "\n",
@@ -220,9 +360,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function ltr.clickmodels.ubm.Model.__init__.<locals>.<lambda>()>,\n",
+       "            {(0, 1): 0.0025465408240250265,\n",
+       "             (-1, 0): 0.9999999999999993,\n",
+       "             (-1, 1): 1.0})"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.ranks"
    ]
@@ -238,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,9 +402,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function ltr.clickmodels.cascade.Model.__init__.<locals>.<lambda>()>,\n",
+       "            {('rambo', 1): 0.5,\n",
+       "             ('star trek', 5): 0.0,\n",
+       "             ('star trek', 2): 0.5,\n",
+       "             ('rambo', 2): 0.0,\n",
+       "             ('rambo', 3): 1.0,\n",
+       "             ('star trek', 1): 0.0,\n",
+       "             ('star trek', 3): 0.0,\n",
+       "             ('star trek', 9): 1.0,\n",
+       "             ('rambo', 9): 0.0,\n",
+       "             ('star trek', 6): 1.0,\n",
+       "             ('rambo', 7): 0.0,\n",
+       "             ('rambo', 4): 1.0,\n",
+       "             ('star trek', 8): 1.0,\n",
+       "             ('star trek', 7): 1.0})"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.attracts"
    ]
@@ -266,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,18 +455,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function ltr.clickmodels.sdbn.Model.__init__.<locals>.<lambda>()>,\n",
+       "            {('rambo', 3): 1.0,\n",
+       "             ('rambo', 2): 0.0,\n",
+       "             ('rambo', 1): 0.5,\n",
+       "             ('star trek', 3): 0.75,\n",
+       "             ('star trek', 2): 0.25,\n",
+       "             ('star trek', 5): 0.5,\n",
+       "             ('star trek', 9): 1.0,\n",
+       "             ('star trek', 1): 0.5,\n",
+       "             ('rambo', 0): 1.0,\n",
+       "             ('rambo', 9): 0.0,\n",
+       "             ('star trek', 6): 1.0,\n",
+       "             ('rambo', 4): 1.0,\n",
+       "             ('rambo', 7): 0.0,\n",
+       "             ('star trek', 8): 1.0,\n",
+       "             ('star trek', 4): 0.0,\n",
+       "             ('star trek', 7): 1.0})"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.attracts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function ltr.clickmodels.sdbn.Model.__init__.<locals>.<lambda>()>,\n",
+       "            {('rambo', 3): 1.0,\n",
+       "             ('rambo', 1): 0.0,\n",
+       "             ('star trek', 3): 1.0,\n",
+       "             ('star trek', 2): 0.0,\n",
+       "             ('star trek', 5): 0.0,\n",
+       "             ('star trek', 9): 1.0,\n",
+       "             ('star trek', 1): 1.0,\n",
+       "             ('rambo', 0): 1.0,\n",
+       "             ('star trek', 6): 0.0,\n",
+       "             ('rambo', 4): 1.0,\n",
+       "             ('star trek', 8): 0.0,\n",
+       "             ('star trek', 7): 0.0})"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.satisfacts"
    ]
@@ -302,7 +531,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -316,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
